update: pom.xml conectado ao microsserviço python

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=postgres
 # Ele atualiza o esquema do banco de dados conforme suas entidades mudam.
 spring.jpa.hibernate.ddl-auto=update
 spring.ai.openai.api-key=sk-API-KEY
+
+# URL do serviço de ingestão Python
+ingestion.python.service.url=http://localhost:5000/ingest
