--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Longinus
 spring.datasource.url=jdbc:postgresql://localhost:8081/rag_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate DDL-Auto: 'update' é ótimo para desenvolvimento.
-# Ele atualiza o esquema do banco de dados conforme suas entidades mudam.
 spring.jpa.hibernate.ddl-auto=update
-spring.ai.openai.api-key=sk-API-KEY
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
