--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=Longinus
-spring.datasource.url=jdbc:postgresql://localhost:8081/rag_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/rag_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.ai.openai.api-key=sk-API-KEY
