fix: Getters e setters corrigidos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Longinus
-spring.datasource.url=jdbc:postgresql://localhost:8081/rag_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/rag_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
-# Hibernate DDL-Auto: 'update' é ótimo para desenvolvimento.
-# Ele atualiza o esquema do banco de dados conforme suas entidades mudam.
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.ai.openai.api-key=sk-API-KEY
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.autoconfigure.exclude=org.springframework.cloud.function.context.config.ContextFunctionCatalogAutoConfiguration
+spring.ai.openai.api-key=""
