--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -4,13 +4,14 @@ services:
   postgres-db:
     image: pgvector/pgvector:pg16
     ports:
-      - "8081:8081"
+      - "5432:5432"
     environment:
       POSTGRES_DB: rag_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   postgres_data:
